--- a/sass_scss/103-sort_strings.scss
+++ b/sass_scss/103-sort_strings.scss
@@ -1,6 +1,5 @@
 /* 103-sort_strings.scss */
-/* Sort! */
 
-$list_to_sort: john anna zoe kim felicia carrie;
+@import '103-sort_list';
 
-@debug "Sorted list: #{sort($list_to_sort)}";
+@debug $list_to_sort;
