--- a/sass_scss/103-sort_strings.scss
+++ b/sass_scss/103-sort_strings.scss
@@ -1,4 +1,4 @@
-/* 103-sort_strings.scss */
+/* Sorts the variable $list_to_sort and prints the sorted list in the debug output */
 
 @import '103-sort_list';
 
