--- a/sass_scss/103-sort_strings.scss
+++ b/sass_scss/103-sort_strings.scss
@@ -1,3 +1,8 @@
-/* Sass file */
-@import '103-sort_list.scss';
-@debug
+/* 103-sort_strings.scss */
+/* Sort! */
+
+// Define the list to sort
+$list_to_sort: john anna zoe kim felicia carrie;
+
+// Sort the list and print in debug output
+@debug "Sorted list: #{sort($list_to_sort)}";
