--- a/sass_scss/6-nested_hover.scss
+++ b/sass_scss/6-nested_hover.scss
@@ -1,11 +1,15 @@
 /* 6-nested_hover.scss */
 /* Nested hover */
 
+// Define Sass variables
+$button-text-color: #FF0000;
+$button-hover-color: #00FF00;
+
 // Define styles for button tags
 button {
-  color: #FF0000; // Text color is initially set to #FF0000
+  color: $button-text-color; // Text color is set to the variable value
 
   &:hover {
-    color: #00FF00; // Change text color to #00FF00 on hover
+    color: $button-hover-color; // Change text color on hover using the variable
   }
 }
